--- a/src/pages/platformAmbient/Vaults/VaultActionModal/VaultWithdraw/VaultWithdraw.module.css
+++ b/src/pages/platformAmbient/Vaults/VaultActionModal/VaultWithdraw/VaultWithdraw.module.css
@@ -237,3 +237,7 @@ padding: 0 8px;
    
     height: 13px;
 }
+.inputBorder{
+    border: 1px solid var(--other-red) !important;
+    display: none;
+}
