fix slippage blur function

--- a/src/pages/platformAmbient/Vaults/VaultActionModal/VaultWithdraw/VaultWithdraw.module.css
+++ b/src/pages/platformAmbient/Vaults/VaultActionModal/VaultWithdraw/VaultWithdraw.module.css
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     gap: 8px;
-    padding:  16px;
+    padding: 16px;
 }
 .main_content {
     width: 100%;
@@ -60,6 +60,15 @@
     flex-direction: row;
     align-items: center;
     gap: 8px;
+}
+
+.inputWrapper {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    position: relative;
+    z-index: 1;
+    touch-action: none; /* Add this */
 }
 
 .seperator {
@@ -128,13 +137,13 @@
     border-bottom-right-radius: 4px;
 }
 
-.extraDetailsContainer{
+.extraDetailsContainer {
     display: flex;
     flex-direction: column;
     gap: 10px;
     border-radius: 4px;
-border: 1px solid var(--dark3, #1E1E24);
-padding: 8px ;
+    border: 1px solid var(--dark3, #1e1e24);
+    padding: 8px;
 }
 .extraDetailsRow {
     width: 100%;
@@ -152,65 +161,63 @@ padding: 8px ;
     font-weight: 300;
     line-height: normal;
 }
-.gas_row{
+.gas_row {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: flex-end;
     gap: 8px;
 
-    color: var(--text2, #8B98A5);
-text-align: center;
-font-family: "Lexend Deca";
-font-size: 12px;
-font-style: normal;
-font-weight: 300;
-line-height: normal;
-padding: 0 8px;
+    color: var(--text2, #8b98a5);
+    text-align: center;
+    font-family: 'Lexend Deca';
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+    padding: 0 8px;
 }
-
-
 
 .loading {
     display: flex;
     align-items: center;
     justify-content: center;
-  }
-  
-  .dots::after {
-    content: "";
+}
+
+.dots::after {
+    content: '';
     animation: dots 1.5s steps(5, end) infinite;
-  }
-  
-  @keyframes dots {
+}
+
+@keyframes dots {
     0% {
-      content: "";
+        content: '';
     }
     20% {
-      content: ".";
+        content: '.';
     }
     40% {
-      content: "..";
+        content: '..';
     }
     60% {
-      content: "...";
+        content: '...';
     }
     80% {
-      content: "....";
+        content: '....';
     }
     100% {
-      content: "";
+        content: '';
     }
-  }
-  
-  .slipTolValueContainer{
+}
+
+.slipTolValueContainer {
     display: flex;
     flex-direction: row;
     align-items: center;
     gap: 4px;
-  }
+}
 
-  .slipTolValueContainer input {
+.slipTolValueContainer input {
     height: 100%;
     border: 0px;
     border-radius: var(--border-radius);
@@ -225,7 +232,7 @@ padding: 0 8px;
 .slipTolValueContainer input::placeholder {
     color: var(--text2);
 }
-.errorMessage{
+.errorMessage {
     width: 100%;
     display: flex;
     justify-content: end;
@@ -234,10 +241,10 @@ padding: 0 8px;
     color: var(--other-red);
     font-size: var(--body-size);
     line-height: var(--body-lh);
-   
+
     height: 13px;
 }
-.inputBorder{
+.inputBorder {
     border: 1px solid var(--other-red) !important;
     display: none;
 }
