--- a/src/pages/platformAmbient/Vaults/VaultActionModal/VaultWithdraw/VaultWithdraw.module.css
+++ b/src/pages/platformAmbient/Vaults/VaultActionModal/VaultWithdraw/VaultWithdraw.module.css
@@ -168,6 +168,11 @@ font-weight: 300;
 line-height: normal;
 padding: 0 8px;
 }
+.row{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
 
 
 
