fix styling for input wrapper

--- a/src/pages/platformAmbient/Vaults/VaultActionModal/VaultWithdraw/VaultWithdraw.module.css
+++ b/src/pages/platformAmbient/Vaults/VaultActionModal/VaultWithdraw/VaultWithdraw.module.css
@@ -168,7 +168,7 @@ font-weight: 300;
 line-height: normal;
 padding: 0 8px;
 }
-.row{
+.inputWrapper{
     display: flex;
     flex-direction: row;
     align-items: center;
