--- a/src/pages/platformAmbient/Vaults/VaultRow/VaultRow.module.css
+++ b/src/pages/platformAmbient/Vaults/VaultRow/VaultRow.module.css
@@ -129,7 +129,7 @@
     cursor: pointer;
 }
 
-.actionButton:hover{
+.actionButton:hover {
     color: var(--text1);
 }
 
@@ -141,9 +141,9 @@
 }
 
 @media only screen and (max-width: 768px) {
-    .mainContent,
-    .vaultHeader {
-        grid-template-columns: 50px repeat(2, 1fr) 50px 100px;
+    .vaultHeader,
+    .mainContent {
+        grid-template-columns: 50px repeat(3, 1fr) 100px;
     }
     .poolName {
         display: none;
