add external link on desktop, fix header alignments and remove tooltip

--- a/src/pages/platformAmbient/Vaults/VaultRow/VaultRow.module.css
+++ b/src/pages/platformAmbient/Vaults/VaultRow/VaultRow.module.css
@@ -140,10 +140,17 @@
     border: 1px solid transparent;
 }
 
+@media only screen and (max-width: 1280px) {
+.poolName{
+    font-size: 14px;
+}
+
+
+}
 @media only screen and (max-width: 768px) {
     .vaultHeader,
     .mainContent {
-        grid-template-columns: 50px repeat(3, 1fr) 100px;
+        grid-template-columns: 100px repeat(2, 1fr) 150px 100px;
     }
     .poolName {
         display: none;
@@ -156,10 +163,10 @@
     }
 }
 
-@media only screen and (max-width: 428px) {
+@media only screen and (max-width: 500px) {
     .mainContent,
     .vaultHeader {
-        grid-template-columns: 50px repeat(2, 1fr) 80px;
+        grid-template-columns: 100px repeat(2, 1fr) 80px;
     }
 
     .tempestDisplay {
