--- a/src/pages/platformAmbient/Vaults/VaultActionModal/VaultDeposit/VaultDeposit.module.css
+++ b/src/pages/platformAmbient/Vaults/VaultActionModal/VaultDeposit/VaultDeposit.module.css
@@ -6,7 +6,7 @@
     gap: 16px;
     min-height: 348px;
     position: relative;
-    width: 398px;
+    
 }
 
 .content {
@@ -155,6 +155,15 @@ font-style: normal;
 font-weight: 300;
 line-height: normal;
 padding: 0 8px;
+}
+
+@media only screen and (min-width: 768px) {
+.container{
+  width: 398px;
+}
+
+
+
 }
 .loading {
     display: flex;
