--- a/src/pages/platformFuta/Home/FutaLandings/NewLandings/FutaLanding.module.css
+++ b/src/pages/platformFuta/Home/FutaLandings/NewLandings/FutaLanding.module.css
@@ -20,6 +20,7 @@
     align-items: center;
     flex-direction: column;
     gap: 1rem;
+   margin-top: 7rem;
 }
 .container p {
     color: var(--base-text1, #AACFD1);
