add Ridvan's FUTA navbar fix

--- a/src/components/Futa/Navbar/Navbar.module.css
+++ b/src/components/Futa/Navbar/Navbar.module.css
@@ -8,8 +8,6 @@
     padding: 8px 16px 8px 16px;
     position: relative;
     font-family: 'Roboto Mono';
-
-   
 }
 
 .moreContainer {
@@ -24,8 +22,6 @@
     /* border-radius: 100px; */
     background: var(--dark2, #12121a);
 }
-
-
 
 .rightContainer {
     display: flex;
@@ -63,7 +59,7 @@
     color: var(--text1);
 }
 
-.skipAnimationContainer{
+.skipAnimationContainer {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -113,12 +109,10 @@
     gap: 32px;
 }
 
-.logoContainer h3{
-    color: var(--text1, #AACFD1);
+.logoContainer h3 {
+    color: var(--text1, #aacfd1);
     text-align: center;
-    leading-trim: both;
-    text-edge: cap;
-    font-family: "Fira Mono";
+    font-family: 'Fira Mono';
     font-size: 24px;
     font-style: normal;
     font-weight: 500;
@@ -141,15 +135,13 @@
     color: var(--text1);
 }
 
-
 @media (min-width: 768px) {
-
-    .fixedPositioned{
+    .fixedPositioned {
         position: fixed;
         top: 0;
     }
 
-    .container{
+    .container {
         width: 100%;
         z-index: 99;
     }
@@ -162,34 +154,7 @@
         left: auto;
         right: 16px;
     }
-
-    
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 /* Slanted Tabs Styles */
 .navTabs {
@@ -200,12 +165,10 @@
     display: flex;
     gap: 0px;
     height: 32px;
-    
 }
 
 .navItem {
     display: inline-block;
-   
 }
 
 .navLink {
@@ -214,7 +177,7 @@
     text-transform: uppercase;
     font-size: 20px;
     font-weight: 400;
-    border: 2px solid #5C6F72;
+    border: 2px solid #5c6f72;
     display: block;
     line-height: 1;
     padding: 0.2em 1.5em;
@@ -223,15 +186,42 @@
     transform: skewX(25deg);
     display: inline-block;
     border-radius: 0;
-    transition: background 0.3s, color 0.3s;
+    transition:
+        background 0.3s,
+        color 0.3s;
 }
 
+.navTabs .navItem:first-child .navLink,
+.navTabs .navItem:first-child .navLink::before {
+    transition: all 0s ease-in-out;
+}
+
+.navTabs .navItem:first-child .navLink {
+    border-left: none;
+}
+
+.navTabs .navItem:first-child .navLink::before {
+    position: absolute;
+    left: -6%;
+    top: -2px;
+    width: 10%;
+    height: calc(100% + 4px);
+    transform: skewX(-25deg);
+    content: '';
+    background: transparent;
+    display: block;
+    border: 2px solid #5c6f72;
+    border-right: none;
+}
+.navTabs .navItem:first-child .navLink.active::before,
+.navTabs .navItem:first-child:hover .navLink::before {
+    background: var(--text1);
+}
 
 .slantedText {
     transform: skewX(-27deg);
     display: inline-block;
 }
-
 
 .navLink:hover,
 .navLink:focus {
