--- a/src/components/Futa/SearchableTicker/SearchableTicker.module.css
+++ b/src/components/Futa/SearchableTicker/SearchableTicker.module.css
@@ -301,6 +301,7 @@
 
     .mainBorder{
         border: 2px solid var(--borders, #5C6F72);
+        padding: 8px;
     }
 
     .tickerTableContainer {
