fix build warnings about missing images

--- a/src/components/Global/PointSystemPopup/PointSystemPopup.module.css
+++ b/src/components/Global/PointSystemPopup/PointSystemPopup.module.css
@@ -17,7 +17,7 @@
     transition: var(--transition);
 }
 
-.modal {
+/* .modal {
     width: 100%;
     height: 100%;
     display: flex;
@@ -36,7 +36,7 @@
     align-items: center;
     border-radius: 1rem;
     height: auto;
-}
+} */
 
 .modal_header {
     font-size: 14px;
