--- a/src/pages/common/NotFound/NotFound.module.css
+++ b/src/pages/common/NotFound/NotFound.module.css
@@ -11,6 +11,7 @@
 
 /* NotFound.module.css */
 .flexContainer {
+    content-visibility: auto; /* Ensures the element is rendered only when visible */
     background: url('/src/assets/images/home/home_wallpaper.webp') no-repeat
         center center fixed;
     -webkit-background-size: cover;
